// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unavailable component should render with a link 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-v5-c-empty-state pf-m-lg emptyStateUnavailable-0-2-1"
        data-ouia-component-id="UnavailableContent"
      >
        <div
          class="pf-v5-c-empty-state__content"
        >
          <div
            class="pf-v5-c-empty-state__header"
            data-ouia-component-id="UnavailableContent-header"
          >
            <div
              class="pf-v5-c-empty-state__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                data-ouia-component-id="UnavailableContent-icon"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                />
              </svg>
            </div>
            <div
              class="pf-v5-c-empty-state__title"
            >
              <h5
                class="pf-v5-c-empty-state__title-text"
              >
                This page is temporarily unavailable
              </h5>
            </div>
          </div>
          <div
            class="pf-v5-c-empty-state__body"
            data-ouia-component-id="UnavailableContent-body"
          >
            Try refreshing the page. If the problem persists, contact your organization administrator or visit our
             
            <a
              aria-disabled="false"
              class="pf-v5-c-button pf-m-link emptyStateLinkButton-0-2-2"
              data-ouia-component-id="UnavailableContent-link-button"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              href="https://www.patternfly.org"
              rel="noopener noreferrer"
              target="_blank"
            >
              status page
            </a>
             
            for known outages.
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-v5-c-empty-state pf-m-lg emptyStateUnavailable-0-2-1"
      data-ouia-component-id="UnavailableContent"
    >
      <div
        class="pf-v5-c-empty-state__content"
      >
        <div
          class="pf-v5-c-empty-state__header"
          data-ouia-component-id="UnavailableContent-header"
        >
          <div
            class="pf-v5-c-empty-state__icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v5-svg"
              data-ouia-component-id="UnavailableContent-icon"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
              />
            </svg>
          </div>
          <div
            class="pf-v5-c-empty-state__title"
          >
            <h5
              class="pf-v5-c-empty-state__title-text"
            >
              This page is temporarily unavailable
            </h5>
          </div>
        </div>
        <div
          class="pf-v5-c-empty-state__body"
          data-ouia-component-id="UnavailableContent-body"
        >
          Try refreshing the page. If the problem persists, contact your organization administrator or visit our
           
          <a
            aria-disabled="false"
            class="pf-v5-c-button pf-m-link emptyStateLinkButton-0-2-2"
            data-ouia-component-id="UnavailableContent-link-button"
            data-ouia-component-type="PF5/Button"
            data-ouia-safe="true"
            href="https://www.patternfly.org"
            rel="noopener noreferrer"
            target="_blank"
          >
            status page
          </a>
           
          for known outages.
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Unavailable component should render with no link 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-v5-c-empty-state pf-m-lg emptyStateUnavailable-0-2-1"
        data-ouia-component-id="UnavailableContent"
      >
        <div
          class="pf-v5-c-empty-state__content"
        >
          <div
            class="pf-v5-c-empty-state__header"
            data-ouia-component-id="UnavailableContent-header"
          >
            <div
              class="pf-v5-c-empty-state__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                data-ouia-component-id="UnavailableContent-icon"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                />
              </svg>
            </div>
            <div
              class="pf-v5-c-empty-state__title"
            >
              <h5
                class="pf-v5-c-empty-state__title-text"
              >
                This page is temporarily unavailable
              </h5>
            </div>
          </div>
          <div
            class="pf-v5-c-empty-state__body"
            data-ouia-component-id="UnavailableContent-body"
          >
            Try refreshing the page. If the problem persists, contact your organization administrator or visit our
             
            <a
              aria-disabled="false"
              class="pf-v5-c-button pf-m-link emptyStateLinkButton-0-2-2"
              data-ouia-component-id="UnavailableContent-link-button"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              href=""
              rel="noopener noreferrer"
              target="_blank"
            >
              status page
            </a>
             
            for known outages.
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-v5-c-empty-state pf-m-lg emptyStateUnavailable-0-2-1"
      data-ouia-component-id="UnavailableContent"
    >
      <div
        class="pf-v5-c-empty-state__content"
      >
        <div
          class="pf-v5-c-empty-state__header"
          data-ouia-component-id="UnavailableContent-header"
        >
          <div
            class="pf-v5-c-empty-state__icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v5-svg"
              data-ouia-component-id="UnavailableContent-icon"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
              />
            </svg>
          </div>
          <div
            class="pf-v5-c-empty-state__title"
          >
            <h5
              class="pf-v5-c-empty-state__title-text"
            >
              This page is temporarily unavailable
            </h5>
          </div>
        </div>
        <div
          class="pf-v5-c-empty-state__body"
          data-ouia-component-id="UnavailableContent-body"
        >
          Try refreshing the page. If the problem persists, contact your organization administrator or visit our
           
          <a
            aria-disabled="false"
            class="pf-v5-c-button pf-m-link emptyStateLinkButton-0-2-2"
            data-ouia-component-id="UnavailableContent-link-button"
            data-ouia-component-type="PF5/Button"
            data-ouia-safe="true"
            href=""
            rel="noopener noreferrer"
            target="_blank"
          >
            status page
          </a>
           
          for known outages.
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
